# lyric-lily

./: .gitignore  AGENTS.md  NOTES.md  README.md  orchestrator.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
scripts/: bootstrap_github_plan.sh
src/: main.py
src/lyric_lily/: __init__.py  config.py  lrc_sync.py  main.py  themes.py
src/lyric_lily/lyrics/: __init__.py  local_lrc.py  remote.py  resolver.py  types.py
src/lyric_lily/now_playing/: __init__.py  errors.py  types.py
src/lyric_lily/now_playing/backends/: __init__.py  base.py  linux_playerctl.py
src/lyric_lily/ui/: __init__.py  app.py  lyric_view.py  render.py
tests/: test_config.py  test_linux_playerctl.py  test_lrc_sync.py  test_lyric_view.py  test_lyrics_local.py  test_main_cli.py  test_themes.py  test_ui_app.py  test_ui_render.py
tests/fixtures/: lucki-rip.lrc
